--- a/package.json
+++ b/package.json
@@ -10,5 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "jest": "^22.2.2"
+  },
+  "devDependencies": {
+    "eslint": "^4.17.0",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.8.0"
   }
 }
