--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "seo-verify",
   "version": "0.0.1",
   "description": "",
-  "main": "src/index.js",
+  "main": "index.js",
+  "bin": "cli.js",
   "scripts": {
     "test": "jest",
     "dev": "jest --watch",
@@ -12,11 +13,15 @@
   "license": "ISC",
   "dependencies": {
     "htmlparser2": "^3.9.2",
-    "jest": "^22.2.2"
+    "jest": "^22.2.2",
+    "minimist": "^1.2.0"
   },
   "devDependencies": {
     "eslint": "^4.17.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.8.0"
+  },
+  "engines": {
+    "node" : ">=8.0"
   }
 }
